<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_shadow"
    android:backgroundTint="@color/bg_color"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/order_cancel_reason"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reason"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_marginVertical="15dp"
                android:textStyle="bold" />


            <RadioGroup
                android:id="@+id/rb_cancel_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:divider="@color/light_gray"
                android:showDividers="middle">

                <RadioButton
                    android:id="@+id/rbNotAtHome"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layoutDirection="ltr"
                    android:tag="@string/not_at_home"
                    android:text="@string/not_at_home"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />

                <RadioButton
                    android:id="@+id/rbWrongOrder"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/_5sdp"
                    android:tag="@string/wrong_order"
                    android:text="@string/wrong_order"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />


                <RadioButton
                    android:id="@+id/rbApplyVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/_5sdp"
                    android:tag="@string/forgot_apply"
                    android:text="@string/forgot_apply"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />


                <RadioButton
                    android:id="@+id/rbAdditionalProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_35sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layoutDirection="ltr"
                    android:padding="@dimen/_5sdp"
                    android:tag="@string/forgot_additional"
                    android:text="@string/forgot_additional"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />


            </RadioGroup>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="center"
            android:padding="7dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark_gray" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvDialogConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"

            android:padding="7dp"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>